Relics! And tech too!

--- a/localisation/horse_stuff_l_english.yml
+++ b/localisation/horse_stuff_l_english.yml
@@ -133,3 +133,4 @@
  
  ### Tooltips ###
  tt_magic_amplification:0 "Unlocks magic rituals for your planets, as well as magic rituals that affect your entire empire."
+ tt_egg_incubation:0 "Increases the amount of pops you get from converting other species by §Y1§!"
