--- a/localisation/horse_modifiers_l_english.yml
+++ b/localisation/horse_modifiers_l_english.yml
@@ -22,13 +22,13 @@ planet_weak_magic_field:0 "Weak Magic Field"
 planet_weak_magic_field_desc:0 "This planet is still recovering from a powerful ritual cast on it."
 
 ## Empire Modifiers ##
-ritual_power:0 "Ritual of Power"
+ritual_power:0 "Starswirl's Ritual of Lightning"
 ritual_power_desc:0 ""
 
-ritual_might:0 "Ritual of Might"
+ritual_might:0 "Strong Hoof's Ritual of Strength"
 ritual_might_desc:0 ""
 
-ritual_health:0 "Ritual of Health"
+ritual_health:0 "Swift's Ritual of Fertility"
 ritual_health_desc:0 ""
 
 ritual_knowledge:0 "Ritual of Knowledge"
@@ -37,6 +37,15 @@ ritual_knowledge_desc:0 ""
 ritual_cooldown:0 "Weakened Magical Fields"
 ritual_cooldown_desc:0 "The nations magical fields are still recovering from a powerful ritual what was just recently casted."
 
+magical_stability_6:0 "Magical Instability"
+magical_stability_6_desc:0 ""
+
+magical_stability_4:0 "Magical Instability"
+magical_stability_4_desc:0 ""
+
+magical_stability_2:0 "Magical Instability"
+magical_stability_2_desc:0 ""
 ## Misc ##
 mod_building_magic_crystal_plant_max:0 "Max Magic Crystal Mines"
+mod_country_base_magical_stability_produces_add:0 "Magical Stability"
 
