--- a/localisation/horse_technology_l_english.yml
+++ b/localisation/horse_technology_l_english.yml
@@ -64,8 +64,8 @@
  magic_crystals:0 "Magic Crystals"
  magic_crystals_desc:0 "These magical crystals contain large amounts of magical power within them, making them vital components of sorcery and spellcraft."
  
- magical_stability:0 "Magical Instability"
- magical_stability_desc:0 "This is the instability of your entire nations magical field, keep a close eye on it. Magical Instability of 0 means your empire has perfect stability, rituals can be casted at maximum effect. An instability of 50 means that rituals will have less effect and that the magical field of your nation is weakening. An instability of 100 is a disaster, rituals will have no effect."
+ magical_stability:0 "Magical Stability"
+ magical_stability_desc:0 "This is the magical stability of your empire, it's score determines just how effective rituals will work in your empire."
  
  ### Ship Components ###
  MAGIC_CRYSTAL_ARMOR_1:0 "Crystal Alloy Armor"
