--- a/localisation/horse_events_l_english.yml
+++ b/localisation/horse_events_l_english.yml
@@ -17,15 +17,15 @@ horse_ritual_menu.2.title:0 "The Ritual Room"
 horse_ritual_menu.2.desc:0 "The fields of magic permeating our nation have been weakened by a previous ritual, we must wait for some time until we can perform another ritual of such massive scale."
 horse_ritual_menu.2.a:0 "Okay"
 
-horse_ritual_menu.21.title:0 "Ritual of Power"
+horse_ritual_menu.21.title:0 "Starswirl's Ritual of Lightning"
 horse_ritual_menu.21.desc:0 "The mages gather around the runic circle, their eyes alight with magical power. A low hum begins filling the room as massive amounts of pure magic flow out from the Magic Crystals that have been gathered, all of it pouring into the runic circle at the center. The hum intensifies over the next minute, growing to a slight buzz in ones ear to a loud and oppresive hum, like that of electricity or static. And then it stops, and everyone gathered is overcome with a sudden and strange sensation that only lasts for but a moment.\n\nThe ritual is successful."
 horse_ritual_menu.21.a:0 "Okay"
 
-horse_ritual_menu.22.title:0 "Ritual of Might"
+horse_ritual_menu.22.title:0 "Strong Hoof's Ritual of Strength"
 horse_ritual_menu.22.desc:0 "The mages gather around the runic circle, their eyes alight with magical power. A low hum begins filling the room as massive amounts of pure magic flow out from the Magic Crystals that have been gathered, all of it pouring into the runic circle at the center. The hum intensifies over the next minute, growing to a slight buzz in ones ear to a loud and oppresive hum, like that of electricity or static. And then it stops, and everyone gathered is overcome with a sudden and strange sensation that only lasts for but a moment.\n\nThe ritual is successful."
 horse_ritual_menu.22.a:0 "Okay"
 
-horse_ritual_menu.23.title:0 "Ritual of Health"
+horse_ritual_menu.23.title:0 "Swift's Ritual of Fertility"
 horse_ritual_menu.23.desc:0 "The mages gather around the runic circle, their eyes alight with magical power. A low hum begins filling the room as massive amounts of pure magic flow out from the Magic Crystals that have been gathered, all of it pouring into the runic circle at the center. The hum intensifies over the next minute, growing to a slight buzz in ones ear to a loud and oppresive hum, like that of electricity or static. And then it stops, and everyone gathered is overcome with a sudden and strange sensation that only lasts for but a moment.\n\nThe ritual is successful."
 horse_ritual_menu.23.a:0 "Okay"
 
