--- a/localisation/horse_events_l_english.yml
+++ b/localisation/horse_events_l_english.yml
@@ -7,11 +7,12 @@ horse_ritual_spawn.1.a:0 "Magical."
 
 horse_ritual_menu.1.title:0 "The Ritual Room"
 horse_ritual_menu.1.desc:0 "The candles are lit, the runes have been prepared, and the Magic Crystals have been gathered. What shall we cast today to improve our glorious nation?"
-horse_ritual_menu.1.a:0 "Perform the Ritual of Power"
-horse_ritual_menu.1.b:0 "Perform the Ritual of Might"
-horse_ritual_menu.1.c:0 "Perform the Ritual of Health"
+horse_ritual_menu.1.a:0 "Perform Starswirl's Ritual of Lightning"
+horse_ritual_menu.1.b:0 "Perform Strong Hoof's Ritual of Strength"
+horse_ritual_menu.1.c:0 "Perform Swift's Ritual of Fertility"
 horse_ritual_menu.1.d:0 "Perform the Ritual of Knowledge"
-horse_ritual_menu.1.e:0 "Leave"
+horse_ritual_menu.1.e:0 "Show me more"
+horse_ritual_menu.1.f:0 "Leave"
 
 horse_ritual_menu.2.title:0 "The Ritual Room"
 horse_ritual_menu.2.desc:0 "The fields of magic permeating our nation have been weakened by a previous ritual, we must wait for some time until we can perform another ritual of such massive scale."
@@ -33,8 +34,26 @@ horse_ritual_menu.24.title:0 "Ritual of Knowledge"
 horse_ritual_menu.24.desc:0 "The mages gather around the runic circle, their eyes alight with magical power. A low hum begins filling the room as massive amounts of pure magic flow out from the Magic Crystals that have been gathered, all of it pouring into the runic circle at the center. The hum intensifies over the next minute, growing to a slight buzz in ones ear to a loud and oppresive hum, like that of electricity or static. And then it stops, and everyone gathered is overcome with a sudden and strange sensation that only lasts for but a moment.\n\nThe ritual is successful."
 horse_ritual_menu.24.a:0 "Okay"
 
+horse_ritual_menu.3.title:0 "The Ritual Room"
+horse_ritual_menu.3.desc:0 "The candles are lit, the runes have been prepared, and the Magic Crystals have been gathered. What shall we cast today to improve our glorious nation?"
+horse_ritual_menu.3.a:0 "Interdimensional Star System Summoning"
+horse_ritual_menu.3.e:0 "Go Back"
+horse_ritual_menu.3.f:0 "Leave"
+
+horse_ritual_menu.31.title:0 "Interdimensional Star System Summoning"
+horse_ritual_menu.31.desc:0 "The mages gather around the runic circle, their eyes alight with magical power. A low hum begins filling the room as massive amounts of pure magic flow out from the Magic Crystals that have been gathered, all of it pouring into the runic circle at the center. The hum intensifies over the next minute, growing to a slight buzz in ones ear to a loud and oppresive hum, like that of electricity or static. And then it stops, and everyone gathered is overcome with a sudden and strange sensation that only lasts for but a moment.\n\nThe ritual is successful, but its effects may take some time to see."
+horse_ritual_menu.31.a:0 "Okay"
+
+### Summoning Planets ###
+magic.2.title:0 "Planetary Summoning"
+magic.2.desc:0 "After the exhaustive ritual conducted not too long ago, a new star system has appeared near §Y[Root.Capital.GetName]§!. We will need to send a survey ship to scan it before we can claim it for our nation."
+magic.2.a:0 "Okay"
+
 ### Tooltips ###
 TT_ritual_of_power:0 "Gives the §YRitual of Power§! modifier, granting §G+25%§! monthly energy credits for §Y365 days§!, but the magical fields of your empire will be weakend for §R730 Days§!\n\nIf you have already casted a ritual, you will not be able to do so again until the §YWeakened Magical Fields§! modifier has been removed.\n\n"
 TT_ritual_of_might:0 "Gives the §YRitual of Might§! modifier, granting §G+25%§! Ship Weapons Damage, §G+25%§! Sublight Speed, and §G+25%§! Army Damage for §Y365 days§!, but the magical fields of your empire will be weakend for §R730 Days§!\n\nIf you have already casted a ritual, you will not be able to do so again until the §YWeakened Magical Fields§! modifier has been removed.\n\n"
 TT_ritual_of_health:0 "Gives the §YRitual of Health§! modifier, granting §G+15%§! Pop Growth Speed and §G+10%§! Biological Pop Happiness for §Y365 days§!, but the magical fields of your empire will be weakend for §R730 Days§!\n\nIf you have already casted a ritual, you will not be able to do so again until the §YWeakened Magical Fields§! modifier has been removed.\n\n"
 TT_ritual_of_knowledge:0 "Gives the §YRitual of Power§! modifier, granting §G+10%§! Research Speed for §Y365 days§!, but the magical fields of your empire will be weakend for §R730 Days§!\n\nIf you have already casted a ritual, you will not be able to do so again until the §YWeakened Magical Fields§! modifier has been removed.\n\n"
+
+TT_magic_system_summoning:0 "Pulls a star system out from another dimension, placing it somewhere near your capital. This ritual is not instantaneous, it will take §Y60§! days before you see it's effect."
+TT_magic_system_summoning_timer:0 "It will take §Y60§! days before the new star system is spawned."
