--- a/localisation/horse_modifiers_l_english.yml
+++ b/localisation/horse_modifiers_l_english.yml
@@ -67,6 +67,18 @@ magical_stability_4_desc:0 ""
 
 magical_stability_2:0 "Magical Instability"
 magical_stability_2_desc:0 ""
+
+low_magical_stability_60:0 "Low Magical Stability"
+low_magical_stability_60_desc:0 ""
+
+low_magical_stability_40:0 "Worringly Low Magical Stability"
+low_magical_stability_40_desc:0 ""
+
+low_magical_stability_20:0 "Dangerously Low Magical Stability"
+low_magical_stability_20_desc:0 ""
+
+low_magical_stability_00:0 "No Magical Stability"
+low_magical_stability_00_desc:0 ""
 ## Misc ##
 mod_building_magic_crystal_plant_max:0 "Max Magic Crystal Mines"
 mod_country_base_magical_stability_produces_add:0 "Magical Stability"
